Add signal detection explanation.

--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,9 @@
 
 main.pdf
 
+.venv
+__pycache__
+
 
 # ------------------------------------------------------------------------------
 # github/gitignore/TeX.gitignore
