--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -3,38 +3,24 @@ on:
   push:
     branches:
       - main
+  pull_request:
   workflow_call:
-
-env:
-  # without extension
-  TEX_WORKDIR: tex
-  TEX_FILE: main
-  OUTPUT_NAME: 24-emb-slides
 
 # make sure that GITHUB_TOKEN has permissions
 permissions:
   contents: write
 
 jobs:
-  build:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Set up Git repository
-        uses: actions/checkout@v4
+  build-slides:
+    uses: ./.github/workflows/template_build.yaml
+    with:
+      tex-workdir: slides
+      tex-file: main
+      output-name: 24_emb_presentation
 
-      - name: Compile LaTeX document
-        uses: xu-cheng/latex-action@v3
-        with:
-          working_directory: ${{ env.TEX_WORKDIR }}
-          root_file: ${{ env.TEX_FILE }}.tex
-          latexmk_shell_escape: true
-
-      - name: Copy file
-        run: |
-          cp ${{ env.TEX_WORKDIR }}/${{ env.TEX_FILE }}.pdf ${{ env.OUTPUT_NAME }}.pdf
-
-      - name: Upload as artifact
-        uses: actions/upload-artifact@v4
-        with:
-          name: ${{ env.OUTPUT_NAME }}
-          path: ${{ env.OUTPUT_NAME }}.pdf
+  build-article:
+    uses: ./.github/workflows/template_build.yaml
+    with:
+      tex-workdir: article
+      tex-file: main
+      output-name: 24_emb_article
